Issue #1100